[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-redis-gateway"
version = "0.1.0"
description = "Redis-backed HTTP gateway and worker pool for Hermes CLI one-shot inference."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "redis>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
hermes-redis-gateway-api = "hermes_redis_gateway.api:main"
hermes-redis-gateway-worker = "hermes_redis_gateway.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
